<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/grey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_more_btn_about"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/about"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/dialog_more_btn_setting"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_shezhi"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/setting"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/dialog_more_btn_record"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/history_record"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">
        <Button
            android:id="@+id/dialog_more_btn_info"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_xiqing"
            android:text="@string/account_info"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/dialog_more_btn_back"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_back"
            android:text="@string/account_back"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="12sp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
</LinearLayout>