<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">
        <TextView
            android:id="@+id/item_mainlv_top_iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_out"/>
        <TextView
            android:id="@+id/item_mainlv_top_iv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:layout_below="@id/item_mainlv_top_iv1"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>
        <ImageView
            android:id="@+id/item_mainlv_top_iv_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ih_show"
            android:layout_alignTop="@id/item_mainlv_top_iv_out"/>
        <TextView
            android:id="@+id/item_mainlv_top_iv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_in"
            android:layout_below="@id/item_mainlv_top_iv_out"/>
        <TextView
            android:id="@+id/item_mainlv_top_iv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:layout_below="@id/item_mainlv_top_iv2" />
        <TextView
            android:id="@+id/item_mainlv_top_iv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/item_mainlv_top_iv2"/>
        <TextView
            android:id="@+id/item_mainlv_top_iv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/item_mainlv_top_iv_in"/>
        <TextView
            android:id="@+id/item_mainlv_top_iv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ih_biaoge"
            android:layout_below="@id/item_mainlv_top_iv_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/Excel"
            android:textColor="@color/green"
            android:drawablePadding="10dp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/item_mainlv_top_iv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="今日支出￥0 收入￥0"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>